force-app/main/default/objects/Club_Directory_Sync__c/Club_Directory_Sync__c.object-meta.xml
<CustomObject>
    <label>Club Directory Sync</label>
    <nameField><displayFormat>SC-{00000}</displayFormat><label>Club Directory Sync Number</label><type>AutoNumber</type></nameField>
    <pluralLabel>Club Directory Syncs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>