force-app/main/default/objects/Club_Directory_Sync__c/fields/Completed_At__c.field-meta.xml
<CustomField><fullName>Completed_At__c</fullName><label>Last Successful Refresh</label><type>DateTime</type></CustomField>