force-app/main/default/objects/Club_Directory_Sync__c/fields/Directory_Key__c.field-meta.xml
<CustomField><fullName>Directory_Key__c</fullName><label>Directory Key</label><externalId>true</externalId><length>40</length><unique>true</unique><type>Text</type></CustomField>