force-app/main/default/objects/Club_Directory_Sync__c/fields/Error__c.field-meta.xml
<CustomField><fullName>Error__c</fullName><label>Last Error</label><length>255</length><type>Text</type></CustomField>