force-app/main/default/objects/Club_Directory_Sync__c/fields/Record_Count__c.field-meta.xml
<CustomField><fullName>Record_Count__c</fullName><label>Last Successful Record Count</label><precision>7</precision><scale>0</scale><type>Number</type></CustomField>