force-app/main/default/objects/Club_Directory_Sync__c/fields/Run_Token__c.field-meta.xml
<CustomField><fullName>Run_Token__c</fullName><label>Run Token</label><length>64</length><type>Text</type></CustomField>