force-app/main/default/objects/Club_Directory_Sync__c/fields/Started_At__c.field-meta.xml
<CustomField><fullName>Started_At__c</fullName><label>Last Attempt Started</label><type>DateTime</type></CustomField>